Fix header alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,7 +203,7 @@ footer ul#social-networks a {
         flex-direction: row;
         justify-content: space-evenly;
         align-items: center;
-        height: 6vh;
+        height: 6.2vh;
         background-color: #fff;
     }
 
